--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-refresh": "^0.8.3",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@babel/core": "7.12.3",
@@ -35,6 +36,7 @@
     "@types/react": "^16.9.54",
     "@types/react-dom": "^16.9.9",
     "@types/react-redux": "^7.1.9",
+    "@types/request": "^2.48.5",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
     "babel-eslint": "^10.1.0",
